jumbortron alignment fixed

--- a/src/css/Evgeni.css
+++ b/src/css/Evgeni.css
@@ -1,9 +1,16 @@
 .notJumbotronContainer {
-	border-radius: 15px;
+
 	/*height: 500px; removed, messed up the scaling*/
-	border: 1px lightgrey solid;
+	
 	margin-bottom: 15px;
 	padding-bottom: 2rem; /*this whill leave 2 rows of space at the bottom and the container can self adjust it's heigth*/
+	background-color: rgb(255, 255, 255);
+
+	border: 1px solid #d6d5d1;
+	border-radius: 25px;
+	font-size: 14px;
+	margin-bottom: 20px;
+	
 }
 .addProfileSection.second {
 	background-color: white;
